objects/Partner_Account_Profile__c.object
<CustomObject>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>Outside US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>States_Served__c</fullName>
        <label>States Served</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Storage__c</fullName>
        <description>0-10
10-20
20-30
30-40
40-50
50-60
60-70
70-80
80-90
90-100</description>
        <label>Storage %</label>
        <picklist>
            <picklistValues>
                <fullName>0-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80-90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90-100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_ID_Number__c</fullName>
        <label>Tax ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_ID_Type_Other__c</fullName>
        <label>Tax ID Type Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_ID_Type__c</fullName>
        <label>Tax ID Type</label>
        <picklist>
            <picklistValues>
                <fullName>VAT/TAX Identification Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Tax Identification Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goods and Services Tax Number (GST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_Name__c</fullName>
        <label>Tier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unified_Communications_VOIP__c</fullName>
        <description>Unified Communications/VOIP %</description>
        <label>Unified Communications/VOIP %</label>
        <picklist>
            <picklistValues>
                <fullName>0-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80-90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90-100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Virtualization__c</fullName>
        <description>0-10
10-20
20-30
30-40
40-50
50-60
60-70
70-80
80-90
90-100</description>
        <label>Virtualization %</label>
        <picklist>
            <picklistValues>
                <fullName>0-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80-90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90-100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WAN_Optimization__c</fullName>
        <label>WAN Optimization %</label>
        <picklist>
            <picklistValues>
                <fullName>0-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80-90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90-100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wireless_WAN_LAN__c</fullName>
        <label>Wireless WAN/LAN %</label>
        <picklist>
            <picklistValues>
                <fullName>0-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80-90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90-100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Years_in_Business__c</fullName>
        <label>Years in Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Partner Account Profile</label>
    <nameField>
        <displayFormat>PAP-{0000}</displayFormat>
        <label>Partner Account Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Accounts Profile</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>